welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
gauche()
^Balin:15: error: ';' expected but 'else' found.
	} else { avance()
          ^